fixed distorted icons in sidebar

--- a/src/app/components/staff-side-bar/staff-side-bar.component.scss
+++ b/src/app/components/staff-side-bar/staff-side-bar.component.scss
@@ -39,6 +39,10 @@
   .side-bar {
     width: 50px;
   }
+  .side-bar-icon {
+    width: 20px;
+    height: 20px;
+  }
   .text {
     display: none;
   }
